2003-08-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/makefile
	* sources/gtk-sharp.sources
	* sources/.cvsignore: Target Gtk+-2.2.3 and Pango-1.2.4

2003-08-26  Alp Toker  <alp@atoker.com>

	* glue/style.c: glue and corresponding .custom entries for
	BaseGC, plus the ability to set GCs

2003-08-21  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gnomeprint: 
	* api/gnomeprint-api.xml: Removed, gnomeprint is now included
	in gnome.

2003-08-19  John Luke  <jluke@cfl.rr.com>

	* glib/ListBase.cs:  Add convenience .Append (string) method

2003-08-19  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Method.cs: Fixed bug where all ToString methods
	was marked as override, this is only correct if the ToString
	method does not have any parameters.

2003-08-18  Aleksey Sanin  <aleksey@aleksey.com>

	* generator/SignalHandler.cs : take refs on GObject sig parms.

2003-08-15  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata (Gtk.TreeView.CellArea): Apply patch from
	Aleksey Sanin <aleksey@aleksey.com> to declare the "Gdk.Rectangle
	rect" parameter as an out parameter. This is required because
	Gdk.Rectangle is a struct.

2003-08-14  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/Gnome.metadata: Renamed use of keyword base to Base 
	in GnomePrintUnit method GetIdentity.
	Added GObject as the parent for GnomePrintTransport and
	GnomePrintPdf
	* sources/gtk-sharp.sources: Added libgnomeprintui/gpaui

2003-08-13  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/makefile: 
	* sources/gtk-sharp.sources: Added libgnomeprint-2.2.2 and
	libgnomeprintui-2.2.2

2003-08-08  Mike Kestner  <mkestner@ximian.com>

	* sources/gtk-sharp.sources : point to gtkhtml-3.0.8 dir
	* sources/gtkhtml-font-style-enum.patch : ditto
	* sources/makefile : fix some urls, make a get-gtkhtml-code
	target, and use gtkhtml-3.0.8 instead of cvs.

2003-08-06  Duncan Mak  <duncan@ximian.com>

	* sources/Atk.metadata: Make Mr. Art.VpathDash an Opaque struct