@@ -1,3 +1,14 @@
+2003-08-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* gconf/GConf/Value.cs: implemented support for lists.
+
+	* glib/ListBase.cs: implemented the IDisposable stuff and created a
+	new method, FreeList, to free the list when needed.
+
+	* glade/HandlerNotFoundException.cs: make it derive from
+	SystemException. Don't override Message, the message is created in the
+	.ctor.
+
 2003-08-26  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* sources/makefile
